modified:   App.php 	modified:   ajax.js 	new file:   edit_event.php 	modified:   events.php 	modified:   images.js 	modified:   index.php 	new file:   resgister_event.php 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -34,3 +34,25 @@ input[type="file"] {
     padding: 10px;
 }
 
+.events-card{
+    border-radius: 20px;
+    padding: 10px;
+    margin: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 200%;
+}
+
+.bg-unifae{
+    background-color: #2FBBAF;
+    color: white;
+    font-weight: bold;
+}
+
+.table-dark {
+    background-color: #2FBBAF !important;
+    color: white;
+    font-weight: bold;
+}
